Update for proper stat display

--- a/viz/index.html
+++ b/viz/index.html
@@ -305,22 +305,28 @@
                  onmouseover="this.src='static/images/Pause_2.png'"
                  onmouseout="this.src='static/images/Pause_1.png'"/>
             <dl>
-              <dt>ID</dt>
+              <dt>Satellite Id</dt>
                 <dd id="satellite_id"></dd>
-              <dt>X Km</dt>
-                <dd id="satellite_x"></dd>
-              <dt>Y Km</dt>
-                <dd id="satellite_y"></dd>
-              <dt>Z Km</dt>
-                <dd id="satellite_z"></dd>
-              <dt>Velocity</dt>
-                <dd id="satellite_velocity"></dd>
-              <dt>Latitude</dt>
-                <dd id="satellite_latitude"></dd>
-              <dt>Longitude</dt>
-                <dd id="satellite_longitude"></dd>
-              <dt>Height</dt>
-                <dd id="satellite_height"></dd>
+              <dt>Local Time</dt>
+                <dd id="local_time"></dd>
+              <dt>UTC</dt>
+                <dd id="utc_time"></dd>
+              <dt>Velocity (km/s)</dt>
+                <dd id="satellite_velocity_kms"></dd>
+              <dt>Velocity (mi/s)</dt>
+                <dd id="satellite_velocity_ms"></dd>
+              <dt>Latitude (&deg;)</dt>
+                <dd id="satellite_latInDegrees"></dd>
+              <dt>Latitude (R)</dt>
+                <dd id="satellite_latInRads"></dd>
+              <dt>Longitude(&deg;)</dt>
+                <dd id="satellite_lonInDegrees"></dd>
+              <dt>Longitude(R)</dt>
+                <dd id="satellite_lonInRads"></dd>
+              <dt>Height (km)</dt>
+                <dd id="satellite_height_km"></dd>
+              <dt>Height (mi)</dt>
+                <dd id="satellite_height_m"></dd>
             </dl>
             <h3>More on <span id="satellite_name2"></span></h3>
             <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
@@ -329,12 +335,6 @@
           </div> <!-- /satellite_display -->
         </div> <!-- /cesiumContainer -->
       </div> <!-- /main -->
-
-      <div style="position: absolute; left: 50%; bottom: 10px;">
-        <div id="user_date" style="position: relative; left: -50%;">
-            <p>Local Time: <span id="local_time"></span>&nbsp;&nbsp;&nbsp;&nbsp;UTC: <span id="utc_time"></span></p>
-        </div>
-    </div>
     </div> <!-- /wrapper -->
   </body>
 </html>
