All but Longitude working.

--- a/viz/index.html
+++ b/viz/index.html
@@ -56,7 +56,7 @@
 
     <script type="text/javascript" src="cesium/Cesium.js"></script>
     <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script>
-    <script type="text/javascript" src="static/js/modernizr_load.js"></script>
+    <script type="text/javascript" src="static/js/modernizr_load.min.js"></script>
 
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/main.css">
@@ -307,10 +307,6 @@
             <dl>
               <dt>Satellite Id</dt>
                 <dd id="satellite_id"></dd>
-              <dt>Local Time</dt>
-                <dd id="local_time"></dd>
-              <dt>UTC</dt>
-                <dd id="utc_time"></dd>
               <dt>Velocity (km/s)</dt>
                 <dd id="satellite_velocity_kms"></dd>
               <dt>Velocity (mi/s)</dt>
