--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -166,6 +166,6 @@
         </form>
       </div> <!-- /statistics -->
     </div> <!-- /wrapper -->
-    <script src="index_crippled.js" type="text/javascript"></script>
+    <script src="index_crippled.min.js" type="text/javascript"></script>
   </body>
 </html>
