Update version numbers.

--- a/viz/sot_extra_header.html
+++ b/viz/sot_extra_header.html
@@ -42,26 +42,11 @@
   Play_2.src = '/media/sot/images/Play_2.png'
 </script>
 
+<script type="text/javascript" src="/media/sot/js/isat.min.js?v=08261013095020"></script>
 
-<script type="text/javascript" src="/media/sot/js/twoline2rv.js"></script>
-<script type="text/javascript" src="/media/sot/js/getgravc.js"></script>
-<script type="text/javascript" src="/media/sot/js/days2mdh.js"></script>
-<script type="text/javascript" src="/media/sot/js/jday.js"></script>
-<script type="text/javascript" src="/media/sot/js/sgp4init.js"></script>
-<script type="text/javascript" src="/media/sot/js/initl.js"></script>
-<script type="text/javascript" src="/media/sot/js/gstime.js"></script>
-<script type="text/javascript" src="/media/sot/js/sgp4.js"></script>
+<script type="text/javascript" src="/media/sot/js/Cesium.js?v=08261013095020"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js?v=08261013095020"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr_load.min.js?v=08261013095020"></script>
 
-<script type="text/javascript" src="/media/sot/js/dscom.js"></script>
-<script type="text/javascript" src="/media/sot/js/dpper.js"></script>
-<script type="text/javascript" src="/media/sot/js/dsinit.js"></script>
-<script type="text/javascript" src="/media/sot/js/dspace.js"></script>
-
-<script type="text/javascript" src="/media/sot/js/tle.js"></script>
-
-<script type="text/javascript" src="/media/sot/cesium/Cesium.js"></script>
-<script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js"></script>
-<script type="text/javascript" src="/media/sot/js/modernizr_load.js"></script>
-
-<link rel="stylesheet" href="/media/sot/css/normalize.css">
-<link rel="stylesheet" href="/media/sot/css/main.css">
+<link rel="stylesheet" href="/media/sot/css/normalize.css?v=08261013095020">
+<link rel="stylesheet" href="/media/sot/css/main.css?v=08261013095020">
