--- a/viz/sot_extra_header.html
+++ b/viz/sot_extra_header.html
@@ -46,7 +46,7 @@
 
 <script type="text/javascript" src="/media/sot/js/Cesium.js?v=08261013095020"></script>
 <script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js?v=08261013095020"></script>
-<script type="text/javascript" src="/media/sot/js/modernizr_load.min.js?v=08261013095020"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=08261013095020"></script>
 
 <link rel="stylesheet" href="/media/sot/css/normalize.css?v=08261013095020">
 <link rel="stylesheet" href="/media/sot/css/main.css?v=08261013095020">
