Fixing some links.

--- a/viz/index.html
+++ b/viz/index.html
@@ -52,14 +52,14 @@
       Play_2.src = 'static/images/Play_2.png'
     </script>
 
-    <script type="text/javascript" src="../js/isat.min.js"></script>
+    <script type="text/javascript" src="../js/isat.min.js?v=08261013095020"></script>
 
-    <script type="text/javascript" src="cesium/Cesium.js"></script>
-    <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script>
-    <script type="text/javascript" src="static/js/modernizr_load.min.js"></script>
+    <script type="text/javascript" src="cesium/Cesium.js?v=08261013095020"></script>
+    <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js?v=08261013095020"></script>
+    <script type="text/javascript" src="static/js/modernizr_load.js?v=08261013095020"></script>
 
-    <link rel="stylesheet" href="static/css/normalize.css">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/normalize.css?v=08261013095020">
+    <link rel="stylesheet" href="static/css/main.css?v=08261013095020">
   </head>
 
   <body>
@@ -313,12 +313,8 @@
                 <dd id="satellite_velocity_ms"></dd>
               <dt>Latitude (&deg;)</dt>
                 <dd id="satellite_latInDegrees"></dd>
-              <dt>Latitude (R)</dt>
-                <dd id="satellite_latInRads"></dd>
               <dt>Longitude(&deg;)</dt>
                 <dd id="satellite_lonInDegrees"></dd>
-              <dt>Longitude(R)</dt>
-                <dd id="satellite_lonInRads"></dd>
               <dt>Height (km)</dt>
                 <dd id="satellite_height_km"></dd>
               <dt>Height (mi)</dt>
