Update to CSS and JS.

--- a/isat/sot_extra_header.html
+++ b/isat/sot_extra_header.html
@@ -1,5 +1,4 @@
 <script type="text/javascript">
-  <!--//--><![CDATA[//><!--
   opsmode = 'i'; //GLOBAL for intl, 'i'mproved
 
   var images = new Array()
@@ -30,15 +29,10 @@
     '/media/sot/images/Play_1.png',
     '/media/sot/images/Play_2.png'
   )
-  //--><!]]>
 </script>
-<script type="text/javascript" src="/media/sot/js/isat.min.js?v=10212013131133">
-</script>
-<script type="text/javascript" src="/media/sot/cesium/Cesium.js?v=10212013131133">
-</script>
-<script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js?v=10212013131133">
-</script>
-<script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=10212013131133">
-</script>
-<link rel="stylesheet" href="/media/sot/css/normalize.css?v=10212013131133">
-<link rel="stylesheet" href="/media/sot/css/main.css?v=10212013131133">
+<script type="text/javascript" src="/media/sot/js/isat.min.js?v=11122013120737"></script>
+<script type="text/javascript" src="/media/sot/cesium/Cesium.js?v=11122013120737"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js?v=11122013120737"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=11122013120737"></script>
+<link rel="stylesheet" href="/media/sot/css/normalize.css?v=11122013120737">
+<link rel="stylesheet" href="/media/sot/css/main.css?v=11122013120737">
