--- a/isat/sot_body.html
+++ b/isat/sot_body.html
@@ -242,10 +242,12 @@
           <dt>Height (mi)</dt>
           <dd id="satellite_height_m"></dd>
         </dl>
-        <h3>More on <span id="satellite_name2"></span></h3>
-        <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
-        <br>
-        <a id="nssdc_url" href="#" target="nssdc">National Space Science Data Center</a>
+        <div id="smd_info">
+          <h3>More on <span id="satellite_name2"></span></h3>
+          <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
+          <br>
+          <a id="nssdc_url" href="#" target="nssdc">National Space Science Data Center</a>
+        </div>
       </div> <!-- /#satellite_display -->
     </div> <!-- /#cesiumContainer -->
   </div> <!-- /#wrapper -->
