--- a/isat/sot_extra_header.html
+++ b/isat/sot_extra_header.html
@@ -27,12 +27,17 @@
     '/media/sot/images/Pause_1.png',
     '/media/sot/images/Pause_2.png',
     '/media/sot/images/Play_1.png',
-    '/media/sot/images/Play_2.png'
+    '/media/sot/images/Play_2.png',
+    '/media/sot/cesium/Cesium_Logo_forDarkBackground.png'
   )
 </script>
-<script type="text/javascript" src="/media/sot/js/isat.min.js?v=11122013120737"></script>
-<script type="text/javascript" src="/media/sot/cesium/Cesium.js?v=11122013120737"></script>
-<script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js?v=11122013120737"></script>
-<script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=11122013120737"></script>
-<link rel="stylesheet" href="/media/sot/css/normalize.css?v=11122013120737">
-<link rel="stylesheet" href="/media/sot/css/main.css?v=11122013120737">
+<script type="text/javascript" src="/media/sot/js/isat.min.js?v=01142014163240">
+</script>
+<script type="text/javascript" src="/media/sot/cesium/Cesium.js?v=01142014163240">
+</script>
+<script type="text/javascript" src="/media/sot/js/modernizr-2.7.1.min.js?v=01142014163240">
+</script>
+<script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=01142014163240">
+</script>
+<link rel="stylesheet" href="/media/sot/css/normalize.css?v=01142014163240">
+<link rel="stylesheet" href="/media/sot/css/main.css?v=01142014163240">
