--- a/isat/index.html
+++ b/isat/index.html
@@ -52,7 +52,7 @@
   </script>
   <script type="text/javascript" src="media/sot/cesium/Cesium.js">
   </script>
-  <script type="text/javascript" src="media/sot/js/modernizr-2.6.2.min.js">
+  <script type="text/javascript" src="media/sot/js/modernizr-2.7.1.min.js">
   </script>
   <script type="text/javascript" src="media/sot/js/modernizr_load.js">
   </script>
@@ -384,10 +384,12 @@
               <dt>Height (mi)</dt>
               <dd id="satellite_height_m"></dd>
             </dl>
-            <h3>More on <span id="satellite_name2"></span></h3>
-            <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
-            <br>
-            <a id="nssdc_url" href="#" target="nssdc">National Space Science Data Center</a>
+            <div id="smd_info">
+              <h3>More on <span id="satellite_name2"></span></h3>
+              <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
+              <br>
+              <a id="nssdc_url" href="#" target="nssdc">National Space Science Data Center</a>
+            </div>
           </div> <!-- /#satellite_display -->
         </div> <!-- /#cesiumContainer -->
       </div> <!-- /#wrapper -->
