updating url for production

--- a/isat/index.html
+++ b/isat/index.html
@@ -9,12 +9,12 @@
   <title>
     Interactive Satellite Tracker (iSat)
   </title>
-  <link rel="stylesheet" href="media/css/combined.min.css?1374773120" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="media/css/print.css?1374773120" type="text/css" media="print" charset="utf-8" />
-  <link rel="stylesheet" href="media/css/combined.min.css?1374773120" type="text/css" media="handheld" charset="utf-8" />
+  <link rel="stylesheet" href="/media/css/combined.min.css?1374773120" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="/media/css/print.css?1374773120" type="text/css" media="print" charset="utf-8" />
+  <link rel="stylesheet" href="/media/css/combined.min.css?1374773120" type="text/css" media="handheld" charset="utf-8" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript">
   </script>
-  <script src="media/js/federated-analytics.js?1374773120" type="text/javascript">
+  <script src="/media/js/federated-analytics.js?1374773120" type="text/javascript">
   </script>
   <script type="text/javascript">
     opsmode = 'i'; //GLOBAL for intl, 'i'mproved
@@ -27,39 +27,39 @@
       }
     }
     preload(
-      'media/sot/images/Banner.jpg',
-      'media/sot/images/Title.png',
-      'media/sot/images/NASA_logo.png',
-      'media/sot/images/Zoom_out.png',
-      'media/sot/images/Zoom_in.png',
-      'media/sot/images/Refresh_1.png',
-      'media/sot/images/Refresh_2.png',
-      'media/sot/images/Info_1.png',
-      'media/sot/images/Info_2.png',
-      'media/sot/images/Orbit_1.png',
-      'media/sot/images/Orbit_2.png',
-      'media/sot/images/Satellite_1.png',
-      'media/sot/images/Satellite_2.png',
-      'media/sot/images/Expand_1.png',
-      'media/sot/images/Expand_2b.png',
-      'media/sot/images/Pause_1.png',
-      'media/sot/images/Pause_2.png',
-      'media/sot/images/Play_1.png',
-      'media/sot/images/Play_2.png'
+      '/media/sot/images/Banner.jpg',
+      '/media/sot/images/Title.png',
+      '/media/sot/images/NASA_logo.png',
+      '/media/sot/images/Zoom_out.png',
+      '/media/sot/images/Zoom_in.png',
+      '/media/sot/images/Refresh_1.png',
+      '/media/sot/images/Refresh_2.png',
+      '/media/sot/images/Info_1.png',
+      '/media/sot/images/Info_2.png',
+      '/media/sot/images/Orbit_1.png',
+      '/media/sot/images/Orbit_2.png',
+      '/media/sot/images/Satellite_1.png',
+      '/media/sot/images/Satellite_2.png',
+      '/media/sot/images/Expand_1.png',
+      '/media/sot/images/Expand_2b.png',
+      '/media/sot/images/Pause_1.png',
+      '/media/sot/images/Pause_2.png',
+      '/media/sot/images/Play_1.png',
+      '/media/sot/images/Play_2.png'
     )
   </script>
-  <script type="text/javascript" src="media/sot/js/isat.min.js">
+  <script type="text/javascript" src="/media/sot/js/isat.min.js?v=01282014114850">
   </script>
-  <script type="text/javascript" src="media/sot/cesium/Cesium.js">
+  <script type="text/javascript" src="/media/sot/cesium/Cesium.js?v=01282014114850">
   </script>
-  <script type="text/javascript" src="media/sot/js/modernizr-2.7.1.min.js">
+  <script type="text/javascript" src="/media/sot/js/modernizr-2.7.1.min.js?v=01282014114850">
   </script>
-  <script type="text/javascript" src="media/sot/js/modernizr_load.js">
+  <script type="text/javascript" src="/media/sot/js/modernizr_load.js?v=01282014114850">
   </script>
-  <link rel="stylesheet" href="media/sot/css/normalize.css">
-  <link rel="stylesheet" href="media/sot/css/main.css">
-  <link rel="stylesheet" href="media/custom/custom.css" type="text/css" media="all" charset="utf-8">
-  <script src="media/custom/custom.js" type="text/javascript" charset="utf-8">
+  <link rel="stylesheet" href="/media/sot/css/normalize.css?v=01282014114850">
+  <link rel="stylesheet" href="/media/sot/css/main.css?v=01282014114850">
+  <link rel="stylesheet" href="/media/custom/custom.css" type="text/css" media="all" charset="utf-8">
+  <script src="/media/custom/custom.js" type="text/javascript" charset="utf-8">
   </script>
 </head>
 <body >
@@ -143,64 +143,64 @@
     <div id="backgroundShadow">
       <div id="wrapper">
         <header id="iSat_header">
-          <img src="media/sot/images/Title.png" alt="NASA's Interactive Satellite Viewer" />
-          <img src="media/sot/images/NASA_logo.png" alt="NASA" class="float-right" />
+          <img src="/media/sot/images/Title.png" alt="NASA's Interactive Satellite Viewer" />
+          <img src="/media/sot/images/NASA_logo.png" alt="NASA" class="float-right" />
         </header>
         <div id="cesiumContainer">
           <div class="popup" id="satellite_popup"></div> <!-- /#satellite_popup -->
           <div id="zoom_buttons" class="modal">
-            <img src="media/sot/images/Zoom_out.png"
+            <img src="/media/sot/images/Zoom_out.png"
                  id="zoom_out"
                  title="Zoom Out"
                  alt="Zoom Out"
                  class="zoom_button"/>
-            <img src="media/sot/images/Zoom_in.png"
+            <img src="/media/sot/images/Zoom_in.png"
                  id="zoom_in"
                  title="Zoom In"
                  alt="Zoom In"
                  class="zoom_button"/>
           </div> <!-- /#zoom_buttons -->
           <div id="navigation_buttons" class="modal">
-            <img src="media/sot/images/Refresh_1.png"
+            <img src="/media/sot/images/Refresh_1.png"
                  id="reset_button"
                  title="Reset View"
                  alt="Reset View"
                  class="hud_button"
-                 onmouseover="this.src='media/sot/images/Refresh_2.png'"
-                 onmouseout="this.src='media/sot/images/Refresh_1.png'"/>
-            <img src="media/sot/images/Info_1.png"
+                 onmouseover="this.src='/media/sot/images/Refresh_2.png'"
+                 onmouseout="this.src='/media/sot/images/Refresh_1.png'"/>
+            <img src="/media/sot/images/Info_1.png"
                  id="instructions_button"
                  title="Instructions"
                  alt="Instructions"
                  class="hud_button"
-                 onmouseover="this.src='media/sot/images/Info_2.png'"
-                 onmouseout="this.src='media/sot/images/Info_1.png'"/>
-            <img src="media/sot/images/Orbit_1.png"
+                 onmouseover="this.src='/media/sot/images/Info_2.png'"
+                 onmouseout="this.src='/media/sot/images/Info_1.png'"/>
+            <img src="/media/sot/images/Orbit_1.png"
                  id="display_button"
                  title="Display Options"
                  alt="Display Options"
                  class="hud_button"
-                 onmouseover="this.src='media/sot/images/Orbit_2.png'"
-                 onmouseout="this.src='media/sot/images/Orbit_1.png'"/>
-            <img src="media/sot/images/Satellite_1.png"
+                 onmouseover="this.src='/media/sot/images/Orbit_2.png'"
+                 onmouseout="this.src='/media/sot/images/Orbit_1.png'"/>
+            <img src="/media/sot/images/Satellite_1.png"
                  id="satellite_button"
                  title="Select Satellites"
                  alt="Select Satellites"
                  class="hud_button"
-                 onmouseover="this.src='media/sot/images/Satellite_2.png'"
-                 onmouseout="this.src='media/sot/images/Satellite_1.png'"/>
-            <img src="media/sot/images/Expand_1.png"
+                 onmouseover="this.src='/media/sot/images/Satellite_2.png'"
+                 onmouseout="this.src='/media/sot/images/Satellite_1.png'"/>
+            <img src="/media/sot/images/Expand_1.png"
                  id="fullscreen_button"
                  title="Full Screen Toggle"
                  alt="Full Screen Toggle"
                  class="hud_button"
-                 onmouseover="this.src='media/sot/images/Expand_2b.png'"
-                 onmouseout="this.src='media/sot/images/Expand_1.png'"/>
+                 onmouseover="this.src='/media/sot/images/Expand_2b.png'"
+                 onmouseout="this.src='/media/sot/images/Expand_1.png'"/>
           </div> <!-- /#naviation_buttons -->
-          <div id="cesiumLogo"><img src="media/sot/cesium/Cesium_Logo_forDarkBackground.png"></div>
+          <div id="cesiumLogo"><img src="/media/sot/cesium/Cesium_Logo_forDarkBackground.png"></div>
           <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
           <div id="instructions" class="modal">
-            <img src="media/sot/images/close.png"
+            <img src="/media/sot/images/close.png"
                  id="instructions_close"
                  title="Close Window"
                  alt="Close Window"
@@ -215,7 +215,7 @@
             <p>If you shared your location with your browser a marker will indicate this position on the map.</p>
           </div> <!-- /#instructions -->
           <div id="satellite_form" class="modal">
-            <img src="media/sot/images/close.png" id="satellite_form_close" title="Close Window" alt="Close Window" class="close_button" />
+            <img src="/media/sot/images/close.png" id="satellite_form_close" title="Close Window" alt="Close Window" class="close_button" />
             <form id="controls">
               <fieldset>
                 <legend>Select a Satellite:</legend>
@@ -290,84 +290,84 @@
             </form>
           </div> <!-- /#satellite_form -->
           <div id="map_display" class="modal">
-            <img src="media/sot/images/close.png" id="map_display_close" title="Close Window" alt="Close Window" class="close_button" />
+            <img src="/media/sot/images/close.png" id="map_display_close" title="Close Window" alt="Close Window" class="close_button" />
             <h2>Globe Display</h2>
             <div id="maps">
-              <img src="media/sot/images/Map_Displays.png" alt="Map Display">
+              <img src="/media/sot/images/Map_Displays.png" alt="Map Display">
               <br>
-              <img src="media/sot/images/Bing_1.png"
+              <img src="/media/sot/images/Bing_1.png"
                    id="bing_data_button"
                    title="Select Bing Map"
                    alt="Select Bing Map"
-                   onmouseover="this.src='media/sot/images/Bing_2.png'"
-                   onmouseout="this.src='media/sot/images/Bing_1.png'"/>
-              <img src="media/sot/images/OpenStreet_1.png"
+                   onmouseover="this.src='/media/sot/images/Bing_2.png'"
+                   onmouseout="this.src='/media/sot/images/Bing_1.png'"/>
+              <img src="/media/sot/images/OpenStreet_1.png"
                    id="osm_data_button"
                    title="Select OSM Map"
                    alt="Select OSM Map"
-                   onmouseover="this.src='media/sot/images/OpenStreet_2.png'"
-                   onmouseout="this.src='media/sot/images/OpenStreet_1.png'"/>
-              <img src="media/sot/images/ArcGis_1.png"
+                   onmouseover="this.src='/media/sot/images/OpenStreet_2.png'"
+                   onmouseout="this.src='/media/sot/images/OpenStreet_1.png'"/>
+              <img src="/media/sot/images/ArcGis_1.png"
                    id="arcgis_data_button"
                    title="Select ArcGIS Map"
                    alt="Select ArcGIS Map"
-                   onmouseover="this.src='media/sot/images/ArcGis_2.png'"
-                   onmouseout="this.src='media/sot/images/ArcGis_1.png'"/>
-              <img src="media/sot/images/Offline_1.png"
+                   onmouseover="this.src='/media/sot/images/ArcGis_2.png'"
+                   onmouseout="this.src='/media/sot/images/ArcGis_1.png'"/>
+              <img src="/media/sot/images/Offline_1.png"
                    id="static_data_button"
                    title="Select Offline Map"
                    alt="Select Offline Map"
-                   onmouseover="this.src='media/sot/images/Offline_2.png'"
-                   onmouseout="this.src='media/sot/images/Offline_1.png'"/>
+                   onmouseover="this.src='/media/sot/images/Offline_2.png'"
+                   onmouseout="this.src='/media/sot/images/Offline_1.png'"/>
             </div> <!-- /#maps -->
             <br>
             <div id="perpective">
-              <img src="media/sot/images/Perspective.png" alt="Perspective">
+              <img src="/media/sot/images/Perspective.png" alt="Perspective">
               <br>
-              <img src="media/sot/images/3D_1.png"
+              <img src="/media/sot/images/3D_1.png"
                    id="three_d_display_button"
                    title="Display 3D"
                    alt="Display 3D"
-                   onmouseover="this.src='media/sot/images/3D_2.png'"
-                   onmouseout="this.src='media/sot/images/3D_1.png'"
+                   onmouseover="this.src='/media/sot/images/3D_2.png'"
+                   onmouseout="this.src='/media/sot/images/3D_1.png'"
                    class="perspective_button"/>
-              <img src="media/sot/images/2.5D_1.png"
+              <img src="/media/sot/images/2.5D_1.png"
                    id="columbus_display_button"
                    title="Display Columbus View"
                    alt="Display Columbus View"
-                   onmouseover="this.src='media/sot/images/2.5D_2.png'"
-                   onmouseout="this.src='media/sot/images/2.5D_1.png'"
+                   onmouseover="this.src='/media/sot/images/2.5D_2.png'"
+                   onmouseout="this.src='/media/sot/images/2.5D_1.png'"
                    class="perspective_button"/>
-              <img src="media/sot/images/2D_1.png"
+              <img src="/media/sot/images/2D_1.png"
                    id="two_d_display_button"
                    title="Display 2D"
                    alt="Display 2D"
-                   onmouseover="this.src='media/sot/images/2D_2.png'"
-                   onmouseout="this.src='media/sot/images/2D_1.png'"
+                   onmouseover="this.src='/media/sot/images/2D_2.png'"
+                   onmouseout="this.src='/media/sot/images/2D_1.png'"
                    class="perspective_button"/>
             </div> <!-- /#perpective -->
           </div> <!-- /#map_display -->
           <div id="satellite_display" class="modal">
-            <img src="media/sot/images/close.png"
+            <img src="/media/sot/images/close.png"
                  id="satellite_display_close"
                  title="Close Window"
                  alt="Close Window"
                  class="close_button"/>
             <h2 id="satellite_name"></h2>
-            <img src="media/sot/images/Play_1.png"
+            <img src="/media/sot/images/Play_1.png"
                  id="play_button"
                  title="Play satellite location data"
                  alt="Play satellite location data"
                  class="play_button"
-                 onmouseover="this.src='media/sot/images/Play_2.png'"
-                 onmouseout="this.src='media/sot/images/Play_1.png'"/>
-            <img src="media/sot/images/Pause_1.png"
+                 onmouseover="this.src='/media/sot/images/Play_2.png'"
+                 onmouseout="this.src='/media/sot/images/Play_1.png'"/>
+            <img src="/media/sot/images/Pause_1.png"
                  id="pause_button"
                  title="Pause satellite location data"
                  alt="Pause satellite location data"
                  class="pause_button"
-                 onmouseover="this.src='media/sot/images/Pause_2.png'"
-                 onmouseout="this.src='media/sot/images/Pause_1.png'"/>
+                 onmouseover="this.src='/media/sot/images/Pause_2.png'"
+                 onmouseout="this.src='/media/sot/images/Pause_1.png'"/>
             <dl>
               <dt>Satellite ID</dt>
               <dd id="satellite_id"></dd>
@@ -450,6 +450,6 @@
       <br />
     </div> <!-- /#footer_links -->
   </div> <!-- /#container -->
-  <script src="media/js/base.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/media/js/base.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
