Adding sot_extra_head indicators.

--- a/science.nasa.gov/index.html
+++ b/science.nasa.gov/index.html
@@ -16,6 +16,7 @@
   </script>
   <script src="media/js/federated-analytics.js?1374773120" type="text/javascript">
   </script>
+  <!-- ********** BEGINNING OF sot_extra_head.html ********** -->
   <script type="text/javascript" src="media/sot/js/preload.js">
   </script>
   <script type="text/javascript" src="media/sot/js/isat.min.js">
@@ -28,6 +29,7 @@
   </script>
   <link rel="stylesheet" href="media/sot/css/normalize.css">
   <link rel="stylesheet" href="media/sot/css/main.css">
+  <!-- ********** END OF sot_extra_head.html ********** -->
   <link rel="stylesheet" href="media/custom/custom.css" type="text/css" media="all" charset="utf-8">
   <script src="media/custom/custom.js" type="text/javascript" charset="utf-8">
   </script>
